k8s/04-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: techchallenge
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: techchallenge
spec:
  type: ClusterIP
  selector:
    app: flag-service
  ports:
    - name: http
      port: 8000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: techchallenge
spec:
  type: ClusterIP
  selector:
    app: targeting-service
  ports:
    - name: http
      port: 8000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: techchallenge
spec:
  type: ClusterIP
  selector:
    app: evaluation-service
  ports:
    - name: http
      port: 8000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: techchallenge
spec:
  type: ClusterIP
  selector:
    app: analytics-service
  ports:
    - name: http
      port: 8000
      targetPort: http
